# multhreading-image-processing

./: .gitignore  LICENSE  README.md
cpp/: CMakeLists.txt  multi.cpp  single.cpp
python/: download_images.py  multi.py  single.py
